Fixed issue with file path

--- a/Forensics Notes/CFDI-450-81.md
+++ b/Forensics Notes/CFDI-450-81.md
@@ -5,7 +5,7 @@
 - You can avoid most pitfalls if you run code into the System Management Mode since it is independent of the OS and Hypervisor. However, it requires you to flash the BIOS and reboot the system making it useless in situations where you need the current contents of memory. *(Stüttgen & Cohen, 2013)*
 - When running in protected mode the CPU doesn't directly access physical memory address but rather relies on virtual addresses. *(Stüttgen & Cohen, 2013)*
 
-![alt text](/Figures/Mem_Tool_Testing.png)
+![alt text](./Figures/Mem_Tool_Testing.png)
 ## Process Hiding in Linux
 ## Process Evasion in Windows
 ## Comparative Analysis of Techniques Across Operating Systems
